force-app/main/default/objects/CventEvents__EventCampaignEntry__c/fields/CventEvents__StatusCheckedIn__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__StatusCheckedIn__c</fullName>
    <description>Stores the campaign member status for &quot;session.checkedIn&quot; activity type.</description>
    <label>Status Checked In</label>
    <length>40</length>
    <type>Text</type>
</CustomField>