force-app/main/default/objects/CventEvents__EventCampaignEntry__c/fields/CventEvents__StatusEnrolled__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__StatusEnrolled__c</fullName>
    <description>Stores the campaign member status for &quot;session.enrolled&quot; activity type.</description>
    <label>Status Enrolled</label>
    <length>40</length>
    <type>Text</type>
</CustomField>