force-app/main/default/objects/CventEvents__EventCampaignEntry__c/fields/CventEvents__StatusFeedbackSubmitted__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__StatusFeedbackSubmitted__c</fullName>
    <description>Stores the campaign member status for &quot;session.feedbackSubmitted&quot; activity type.</description>
    <label>Status Feedback Submitted</label>
    <length>40</length>
    <type>Text</type>
</CustomField>