force-app/main/default/objects/CventEvents__EventCampaignEntry__c/fields/CventEvents__StatusUnenrolled__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__StatusUnenrolled__c</fullName>
    <description>Stores the campaign member status for &quot;session.unenrolled&quot; activity type.</description>
    <label>Status Unenrolled</label>
    <length>40</length>
    <type>Text</type>
</CustomField>