force-app/main/default/objects/CventEvents__EventCampaignEntry__c/fields/CventEvents__StatusWaitlisted__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__StatusWaitlisted__c</fullName>
    <description>Stores the campaign member status for &quot;session.waitlisted&quot; activity type.</description>
    <label>Status Waitlisted</label>
    <length>40</length>
    <type>Text</type>
</CustomField>